<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="305dp"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <FrameLayout
        android:id="@+id/fragment_container"
        android:name="com.example.MyFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="44dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="307dp"
        android:layout_height="424dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="420dp">


            <EditText
                android:id="@+id/left_domain_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/left_domain_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/right_domain_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:hint="@string/right_domain_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/points_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:hint="@string/points_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/create"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/right_domain_border"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button_generate"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/grey_generate"
                android:text="@string/generate"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_button"
                app:layout_constraintVertical_bias="0.146"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button_download"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="128dp"
                android:backgroundTint="@color/grey_generate"
                android:text="@string/download"
                android:textColor="@color/black"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/right_domain_border"
                app:layout_constraintVertical_bias="0.778"
                tools:layout_editor_absoluteX="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>